[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-tools-metaview"
version = "0.1.0"
description = "Metaview platform tools extracted from agentic recruiting"
requires-python = ">=3.10"
dependencies = [
  "agentic-tools-core>=0.1.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
]

[tool.setuptools.packages.find]
include = ["agentic_tools_metaview*"]
